{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 8,
  "lineage": "3abe5a43-6288-5954-7309-a30267262fb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:701156759425:instance/i-0358ca767d1f027d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0358ca767d1f027d4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041875790ba52fa9d",
            "private_dns": "ip-172-31-84-180.ec2.internal",
            "private_ip": "172.31.84.180",
            "public_dns": "ec2-54-164-139-12.compute-1.amazonaws.com",
            "public_ip": "54.164.139.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0981b3e0cb9308cb8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "webserver_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-58fc5c79",
            "tags": {
              "Name": "web_inst_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00fe8b651a38bcd57"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:loadbalancer/app/web-lb/32ab5a0f975f724c",
            "arn_suffix": "app/web-lb/32ab5a0f975f724c",
            "dns_name": "web-lb-436976974.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:701156759425:loadbalancer/app/web-lb/32ab5a0f975f724c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "security_groups": [
              "sg-00fe8b651a38bcd57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-58fc5c79"
              },
              {
                "subnet_id": "subnet-ead4bea7"
              }
            ],
            "subnets": [
              "subnet-58fc5c79",
              "subnet-ead4bea7"
            ],
            "tags": {
              "Name": "app_web_lb"
            },
            "vpc_id": "vpc-bcc234c1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:listener/app/web-lb/32ab5a0f975f724c/13f7647385ce85cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:targetgroup/web-al-tg/9e81662b012f6c6f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701156759425:listener/app/web-lb/32ab5a0f975f724c/13f7647385ce85cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:loadbalancer/app/web-lb/32ab5a0f975f724c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.web_lb",
            "aws_lb_target_group.web_al_tg",
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_al_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:targetgroup/web-al-tg/9e81662b012f6c6f",
            "arn_suffix": "targetgroup/web-al-tg/9e81662b012f6c6f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701156759425:targetgroup/web-al-tg/9e81662b012f6c6f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-al-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-bcc234c1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:701156759425:targetgroup/web-al-tg/9e81662b012f6c6f-20201008152644083700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701156759425:targetgroup/web-al-tg/9e81662b012f6c6f",
            "target_id": "i-0358ca767d1f027d4"
          },
          "dependencies": [
            "aws_instance.web_instance_1",
            "aws_lb_target_group.web_al_tg",
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701156759425:security-group/sg-00fe8b651a38bcd57",
            "description": "web security group for web server and LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fe8b651a38bcd57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "701156759425",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-bcc234c1"
          }
        }
      ]
    }
  ]
}